# fornecedor-de-jogos

./: README.md  game_data.xml  main.py  makefile  pyproject.toml  resposta_compra.xml  solicitacao.xml  solicitacao_new.xml  storage.xml  storage_test.xml
src/client/: client.py  controller.py
src/controller/: controller.py
src/converter/: converter.py
src/game/: game.py
src/server/: server.py
tests/client/: process_buy_game_test.py  process_delete_from_storage_test.py  process_new_game_test.py  process_update_from_storage_test.py  storage.xml
tests/controller/: order.xml  process_buy_game_test.py  process_delete_from_storage_test.py  process_new_game_test.py  process_update_from_storage_test.py
tests/converter/: converter_test.py  teste.ipynb
tests/game/: game_test.py
tests/server/: buy_game_test.py  new_game_test.py  server_test.py
